--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,10 @@ nav a {
     margin-bottom: 3px;
 }
 
+.workContainer h3 {
+    font-size: 28px;
+}
+
 .workContainer .border {
     border-bottom: 2px solid white;
     margin-bottom: 10px;
