--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,3 +177,48 @@ nav a {
     padding: 10px;
     margin: 10px;
 }
+
+@media only screen and (max-width: 600px) {
+    .h1Cont {
+        max-width: fit-content;
+        color: white;
+        font-size: 38px;
+        text-align: center;
+    }
+    .h3Cont h3 {
+        margin-top: 3px;
+        padding: 15px;
+        border-right: 1px solid white;
+        font-size: 14px;
+    }
+    .hero {
+        height: 100px;
+    }
+    .aboutContainer {
+        display: block;
+    }
+    .aboutContainer img {
+        margin-left: 75px;
+        height: 150px;
+        width: 150px;
+        
+    }
+    .aboutContainer p {
+        font-size: 16px;
+    }
+    .cardContainer img {
+        width: 100%;
+        height: 200px;
+        border: 1px solid white;
+        border-radius: 8px;
+    }
+    .contactContainer {
+        padding-bottom: 25px;
+        margin-bottom: 25px;
+    }
+    .info h3 {
+        font-size: 18px;
+        padding: 10px;
+        margin: 10px;
+    }
+}
